gtk+2.0 (2.6.0-1) experimental; urgency=low
  * New upstream release (Closes: #275239).
  * debian/control.in:
    - create a gtk2-engines-pixbuf package.
    - recommends hicolor-icon-theme (Closes: #287334).
    - rename libgtk2.0-dbg to libgtk2.0-0-dbg.
    - updated the Build-Depends.
  * debian/gtk2-engines-pixbuf.files:
    - added.
  * debian/libgtk2.0-bin.files:
    - install gtk-update-icon-cache here.
  * debian/libgtk2.0-bin.postinst:
    - call gtk-update-icon-cache.
  * debian/patches/001_gtk+-debian-aclocal-pass_all.patch:
    - removed, should not be needed with the new version.
  * debian/patches/003_treeview-typeahead.patch,
    debian/patches/003_filechooser-search.patch,
    debian/patches/004_treeview-activate.patch,
    debian/patches/005_modifiers.patch:
    - removed, these changes are in the new version.
  * debian/rules:
    - updated the shlibs.
    - use dh_strip to make the debug package.
  * update-gtk-immodules.in:
  * update-gdkpixbuf-loaders.in:
    - module version is 2.4.0.
  * debian/watch:
    - updated.

 -- Sebastien Bacher <seb128@debian.org>  Wed, 29 Dec 2004 18:55:11 +0100

--- a/debian/rules
+++ b/debian/rules
@@ -39,7 +39,7 @@ modver=$(major).$(minor).0
 glibver=2.0
 atkver=1.0
 pangover=1.0
-shver=2.4.4
+shver=2.6.0
 libpath=$(CURDIR)/$(BUILD_SHARED_DIR)/gdk-pixbuf/.libs:$(CURDIR)/$(BUILD_SHARED_DIR)/gdk/.libs:$(CURDIR)/$(BUILD_SHARED_DIR)/gtk/.libs
 
 
@@ -103,8 +103,8 @@ $(STAMP_DIR)/configure-static-stamp:
 			--infodir=\$${prefix}/share/info \
 			--sysconfdir=/etc \
 			--with-xinput=yes \
-			--disable-modules \
 			--with-included-loaders=yes \
+			--disable-modules \
 			--disable-shared \
 			--enable-static
 
@@ -192,14 +192,6 @@ install: install-static install-shared
 
 	cp -ar $(BUILD_SHARED_DIR)/docs/tutorial/images debian/libgtk$(apiver)-doc/usr/share/doc/libgtk$(apiver)-doc/gtk-tutorial/
 	cp $(BUILD_SHARED_DIR)/docs/*.txt debian/libgtk$(apiver)-doc/usr/share/doc/libgtk$(apiver)-doc
-
-	# for -dbg
-	-rm -rf $(CURDIR)/debian/libgtk$(apiver)-$(soname)$(suffix)/usr/lib/debug
-	mkdir -p $(CURDIR)/debian/libgtk$(apiver)-$(soname)$(suffix)/usr/lib/debug
-	for l in `find $(CURDIR)/debian/libgtk$(apiver)-$(soname)$(suffix)/usr/lib -name 'lib*.so*'`; do \
-		cp -vdf $$l \
-			$(CURDIR)/debian/libgtk$(apiver)-$(soname)$(suffix)/usr/lib/debug; \
-	done
 
 	# debian files
 	install -m 755 $(CURDIR)/debian/update-gtk-immodules \
@@ -292,7 +284,7 @@ binary-arch: build install
 	dh_installman -a
 	dh_installinfo -a
 	dh_installchangelogs -a $(BUILD_DIR)/ChangeLog
-	dh_strip -a -Nlibgtk$(apiver)-dbg
+	dh_strip -a --dbg-package=libgtk$(apiver)-$(soname)
 	dh_compress -a
 	dh_fixperms -a
 	dh_makeshlibs -a -Nlibgtk$(apiver)-dbg
