--- a/debian/control.in
+++ b/debian/control.in
@@ -1,9 +1,9 @@
 Source: gtk+2.0
 Section: libs
 Priority: optional
-Maintainer: Akira TAGOH <tagoh@debian.org>
+Maintainer: Sebastien Bacher <seb128@debian.org>
 Uploaders: @GNOME_TEAM@
-Build-Depends: debhelper (>> 4.0.0), gettext, pkg-config, libglib2.0-dev (>= 2.4.1-2), libpango1.0-dev (>= 1.4.0-3), libatk1.0-dev (>= 1.6.1-2), xlibs-static-pic | xlibs-pic (>= 4.2.1-6), libx11-dev | xlibs-dev, libxext-dev | xlibs-dev, libxi-dev | xlibs-dev, libxrandr-dev | xlibs-dev, libxt-dev | xlibs-dev, libxrender-dev, libxft-dev, libxcursor-dev, libtiff4-dev, libjpeg62-dev, libpng12-dev, docbook-utils, linuxdoc-tools-text, gnome-pkg-tools
+Build-Depends: debhelper (>> 4.0.0), gettext, pkg-config, libglib2.0-dev (>= 2.6.0), libpango1.0-dev (>= 1.7.0), libatk1.0-dev (>= 1.6.1-2), xlibs-static-pic | xlibs-pic (>= 4.2.1-6), libx11-dev | xlibs-dev, libxext-dev | xlibs-dev, libxi-dev | xlibs-dev, libxrandr-dev | xlibs-dev, libxt-dev | xlibs-dev, libxrender-dev, libxft-dev, libxcursor-dev, libtiff4-dev, libjpeg62-dev, libpng12-dev, docbook-utils, linuxdoc-tools-text, gnome-pkg-tools
 Build-Depends-Indep: gtk-doc-tools, docbook-xml
 Standards-Version: 3.6.1.0
 
@@ -13,6 +13,7 @@ Architecture: any
 Depends: libgtk2.0-common (>= ${Source-Version}), libgtk2.0-bin (>= ${Source-Version}), ${shlibs:Depends}
 Conflicts: libgtk2.0-0png3, eog2 (<< 1.0.1-4), gnome-panel2 (<< 2.0.4-1), celestia (<< 1.2.4-4), gimp1.3 (<< 1.3.7-1.1), metatheme (<< 0.9.7-3), libgnomeui-0 (<< 2.0.6-2), gtk2.0-examples (<< 2.2.0), libgdkxft0, gtk2-engines-wonderland (<= 1.0-2), gtk2-engines-cleanice (<= 1.2.8-1), gtk2-engines-thinice (<< 2.6), gtk2-engines-crux (<< 2.6), gtk2-engines-mist (<< 2.6), gtk2-engines-highcontrast (<< 2.6), gtk2-engines-lighthouseblue (<< 2.6), gnome-themes (<< 2.6), gtk2-engines-industrial (<< 0.2.32-5), gtk2-engines-pixbuf (<< 2.2.0-2.1), gtk2-engines-redmond95 (<< 2.2.0-2.1), gtk2-engines-metal (<< 2.2.0-2.1), gtk2-engines-magicchicken (<= 1.1.1-4), gtk2-engines-qtpixmap (<= 0.28-1), gtk2-engines-smooth (<< 0.5.6-3), gtk2-engines-xfce (<= 2.1.8-1), tamil-gtk2im (<= 2.2-4), imhangul (<< 0.9.9-3), librsvg2-common (<< 2.6.3-1)
 Replaces: libgtk2.0-0png3
+Recommends: hicolor-icon-theme
 Description: The GTK+ graphical user interface library
  The GTK+ is a multi-platform toolkit for creating graphical user
  interfaces. Offering a complete set of widgets, the GTK+ is suitable
@@ -66,11 +67,13 @@ Description: Development files for the GTK+ library
  This package contains the header files and static libraries which is
  needed for developing the GTK+ applications.
 
-Package: libgtk2.0-dbg
+Package: libgtk2.0-@SONAME@-dbg
 Section: libdevel
 Priority: extra
 Architecture: any
 Depends: libgtk2.0-@SONAME@ (= ${Source-Version})
+Conflicts: libgtk2.0-dbg
+Replaces: libgtk2.0-dbg
 Description: The GTK+ libraries and debugging symbols
  The GTK+ is a multi-platform toolkit for creating graphical user
  interfaces. Offering a complete set of widgets, the GTK+ is suitable
@@ -115,3 +118,16 @@ Description: Examples files for the GTK+ 2.0
  This package contains the examples files and a demonstration program
  for the GTK+-2.0.
 
+Package: gtk2-engines-pixbuf
+Architecture: any
+Depends: ${shlibs:Depends}
+Suggests: gtk-engines-pixmap
+Conflicts: gtk2.0-engines-pixbuf
+Replaces: gtk2.0-engines-pixbuf
+Description: Pixbuf-based theme for GTK+ 2.x
+ The GTK+ is a multi-platform toolkit for creating graphical user
+ interfaces. Offering a complete set of widgets, the GTK+ is suitable
+ for projects ranging from small one-off tools to complete application
+ suites.
+ .
+ This package contains the pixbuf theme engine.
