gtk+2.0 (2.6.7-2) unstable; urgency=low
  * Upload to unstable.
  * Forward patches from 2.6.4 branch:
    + 003_focus_issues.patch: stolen from CVS HEAD to fix focus issues.
    + debian/gtk-tutorial.devhelp: updated to reflect the reality of the
      html files.
  * Loïc Minier:
    + Document the configuration of Emacs-style key bindings in README.Debian,
      with additional instructions for GNOME users. [debian/README.Debian]
      (Closes: #309530)

 -- Josselin Mouette <joss@debian.org>  Mon,  6 Jun 2005 22:39:27 +0200

--- a/debian/control.in
+++ b/debian/control.in
@@ -54,7 +54,7 @@ Description: The programs for the GTK+ graphical user interface library
 Package: libgtk2.0-dev
 Section: libdevel
 Architecture: any
-Depends: libgtk2.0-@SONAME@ (= ${Source-Version}), libglib2.0-dev (>= 2.4.1-2), libpango1.0-dev (>= 1.4.0-3), libatk1.0-dev (>= 1.6.1-2), libx11-dev | xlibs-dev, libxext-dev | xlibs-dev, pkg-config
+Depends: libgtk2.0-@SONAME@ (= ${Source-Version}), libglib2.0-dev (>= 2.4.1-2), libpango1.0-dev (>= 1.5.1), libatk1.0-dev (>= 1.6.1-2), libx11-dev | xlibs-dev, libxext-dev | xlibs-dev, pkg-config
 Suggests: libgtk2.0-doc
 Replaces: libgtk1.3-dev
 Conflicts: libgtk1.3-dev
