--- a/debian/rules
+++ b/debian/rules
@@ -39,7 +39,7 @@ modver=$(major).$(minor).0
 glibver=2.0
 atkver=1.0
 pangover=1.0
-shver=2.7.0
+shver=2.8.0
 libpath=$(CURDIR)/$(BUILD_SHARED_DIR)/gdk-pixbuf/.libs:$(CURDIR)/$(BUILD_SHARED_DIR)/gdk/.libs:$(CURDIR)/$(BUILD_SHARED_DIR)/gtk/.libs
 
 
@@ -78,7 +78,8 @@ $(STAMP_DIR)/configure-shared-stamp:
 			--with-html-dir=\$${prefix}/share/doc/libgtk$(apiver)-doc \
 			--with-xinput=yes \
 			--enable-shared \
-			--disable-static
+			--disable-static \
+			--enable-explicit-deps=yes
 
 	cd $(BUILD_SHARED_DIR) && \
 	sed < libtool > libtool-2 \
@@ -106,7 +107,8 @@ $(STAMP_DIR)/configure-static-stamp:
 			--with-included-loaders=yes \
 			--disable-modules \
 			--disable-shared \
-			--enable-static
+			--enable-static \
+			--enable-explicit-deps=yes
 
 	cd $(BUILD_STATIC_DIR) && \
 	sed < libtool > libtool-2 \
