--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: gtk+2.0
 Section: libs
 Priority: optional
 Maintainer: Sebastien Bacher <seb128@debian.org>
-Uploaders: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>, Akira TAGOH <tagoh@debian.org>, Andreas Rottmann <rotty@debian.org>, Andrew Lau <netsnipe@users.sourceforge.net>, Carlos Perelló Marín <carlos@pemas.net>, Clément Stenac <zorglub@debian.org>, Ed Boraas <ed@debian.org>, Edd Dumbill <ejad@debian.org>, Emil Soleyman-Zomalan <emil@nishra.com>, Gustavo Noronha Silva <kov@debian.org>, J.H.M. Dassen (Ray) <jdassen@debian.org>, Joe Drew <drew@debian.org>, Johannes Rohr <jr.debian@rohr.org>, Jordi Mallach <jordi@debian.org>, Jose Carlos Garcia Sogo <jsogo@debian.org>, Josselin Mouette <joss@debian.org>, Loic Minier <lool@dooz.org>, Marc HE Brockschmidt <he@debian.org>, Ondřej Surý <ondrej@debian.org>, Rob Bradford <rob@debianplanet.org>, Robert McQueen <robot101@debian.org>, Ross Burton <ross@debian.org>, Sjoerd Simons <sjoerd@debian.org>, Takuo KITAME <kitame@debian.org>
+Uploaders: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>, Akira TAGOH <tagoh@debian.org>, Andreas Rottmann <rotty@debian.org>, Andrew Lau <netsnipe@users.sourceforge.net>, Carlos Perelló Marín <carlos@pemas.net>, Clément Stenac <zorglub@debian.org>, Ed Boraas <ed@debian.org>, Edd Dumbill <ejad@debian.org>, Emil Soleyman-Zomalan <emil@nishra.com>, Guilherme de S. Pastore <guilherme.pastore@terra.com.br>, Gustavo Noronha Silva <kov@debian.org>, J.H.M. Dassen (Ray) <jdassen@debian.org>, Joe Drew <drew@debian.org>, Johannes Rohr <jr.debian@rohr.org>, Jordi Mallach <jordi@debian.org>, Jose Carlos Garcia Sogo <jsogo@debian.org>, Josselin Mouette <joss@debian.org>, Loic Minier <lool@dooz.org>, Marc HE Brockschmidt <he@debian.org>, Ondřej Surý <ondrej@debian.org>, Rob Bradford <rob@debianplanet.org>, Robert McQueen <robot101@debian.org>, Ross Burton <ross@debian.org>, Sjoerd Simons <sjoerd@debian.org>, Takuo KITAME <kitame@debian.org>
 Build-Depends: debhelper (>> 4.0.0), gettext, pkg-config, libglib2.0-dev (>= 2.6.0), libpango1.0-dev (>= 1.7.0), libatk1.0-dev (>= 1.6.1-2), xlibs-static-pic | xlibs-pic (>= 4.2.1-6), libx11-dev | xlibs-dev, libxext-dev | xlibs-dev, libxi-dev | xlibs-dev, libxrandr-dev | xlibs-dev, libxt-dev | xlibs-dev, libxrender-dev, libxft-dev, libxcursor-dev, libxinerama-dev, libtiff4-dev, libjpeg62-dev, libpng12-dev, docbook-utils, linuxdoc-tools-text, gnome-pkg-tools
 Build-Depends-Indep: gtk-doc-tools, docbook-xml
 Standards-Version: 3.6.1.0
@@ -10,7 +10,7 @@ Standards-Version: 3.6.1.0
 Package: libgtk2.0-0
 Section: libs
 Architecture: any
-Depends: libgtk2.0-common (>= ${Source-Version}), libgtk2.0-bin (>= ${Source-Version}), ${shlibs:Depends}
+Depends: ${misc:Depends}, libgtk2.0-common (>= ${Source-Version}), libgtk2.0-bin (>= ${Source-Version}), ${shlibs:Depends}
 Conflicts: libgtk2.0-0png3, eog2 (<< 1.0.1-4), gnome-panel2 (<< 2.0.4-1), celestia (<< 1.2.4-4), gimp1.3 (<< 1.3.7-1.1), metatheme (<< 0.9.7-3), libgnomeui-0 (<< 2.0.6-2), gtk2.0-examples (<< 2.2.0), libgdkxft0, gtk2-engines-wonderland (<= 1.0-2), gtk2-engines-cleanice (<= 1.2.8-1), gtk2-engines-thinice (<< 2.6), gtk2-engines-crux (<< 2.6), gtk2-engines-mist (<< 2.6), gtk2-engines-highcontrast (<< 2.6), gtk2-engines-lighthouseblue (<< 2.6), gnome-themes (<< 2.6), gtk2-engines-industrial (<< 0.2.32-5), gtk2-engines-pixbuf (<< 2.2.0-2.1), gtk2-engines-redmond95 (<< 2.2.0-2.1), gtk2-engines-metal (<< 2.2.0-2.1), gtk2-engines-magicchicken (<= 1.1.1-4), gtk2-engines-qtpixmap (<= 0.28-1), gtk2-engines-smooth (<< 0.5.6-3), gtk2-engines-xfce (<= 2.1.8-1), tamil-gtk2im (<= 2.2-4), imhangul (<< 0.9.9-3), librsvg2-common (<< 2.6.3-1)
 Replaces: libgtk2.0-0png3
 Recommends: hicolor-icon-theme
@@ -25,7 +25,7 @@ Description: The GTK+ graphical user interface library
 Package: libgtk2.0-common
 Section: misc
 Architecture: all
-Depends: libgtk2.0-0, ${misc:Depends}
+Depends: ${misc:Depends}
 Replaces: libgtk1.3-common, libgtk2.0-data
 Conflicts: libgtk1.3-common, libgtk2.0-data
 Description: Common files for the GTK+ graphical user interface library
@@ -39,7 +39,7 @@ Description: Common files for the GTK+ graphical user interface library
 Package: libgtk2.0-bin
 Section: misc
 Architecture: any
-Depends: ${shlibs:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
 Replaces: libgtk2.0-common (<= 2.4.0-3), libgtk2.0-dev (<= 2.4.3-1)
 Conflicts: libgtk2.0-dev (<= 2.4.3-1)
 Description: The programs for the GTK+ graphical user interface library
@@ -54,7 +54,7 @@ Description: The programs for the GTK+ graphical user interface library
 Package: libgtk2.0-dev
 Section: libdevel
 Architecture: any
-Depends: libgtk2.0-0 (= ${Source-Version}), libglib2.0-dev (>= 2.4.1-2), libpango1.0-dev (>= 1.5.1), libatk1.0-dev (>= 1.6.1-2), libx11-dev | xlibs-dev, libxext-dev | xlibs-dev, pkg-config
+Depends: ${misc:Depends}, libgtk2.0-0 (= ${Source-Version}), libglib2.0-dev (>= 2.4.1-2), libpango1.0-dev (>= 1.5.1), libatk1.0-dev (>= 1.6.1-2), libx11-dev | xlibs-dev, libxext-dev | xlibs-dev, pkg-config
 Suggests: libgtk2.0-doc
 Replaces: libgtk1.3-dev
 Conflicts: libgtk1.3-dev
@@ -71,7 +71,7 @@ Package: libgtk2.0-0-dbg
 Section: libdevel
 Priority: extra
 Architecture: any
-Depends: libgtk2.0-0 (= ${Source-Version})
+Depends: ${misc:Depends}, libgtk2.0-0 (= ${Source-Version})
 Conflicts: libgtk2.0-dbg
 Replaces: libgtk2.0-dbg
 Description: The GTK+ libraries and debugging symbols
@@ -90,7 +90,7 @@ Description: The GTK+ libraries and debugging symbols
 Package: libgtk2.0-doc
 Section: doc
 Architecture: all
-Depends: lynx | www-browser
+Depends: ${misc:Depends}, lynx | www-browser
 Replaces: libgtk1.3-doc
 Conflicts: libgtk1.3-doc
 Suggests: libglib2.0-doc, libatk1.0-doc, libpango1.0-doc
@@ -107,7 +107,7 @@ Package: gtk2.0-examples
 Section: x11
 Priority: extra
 Architecture: any
-Depends: ${shlibs:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
 Replaces: libgtk1.3-dev
 Description: Examples files for the GTK+ 2.0
  The GTK+ is a multi-platform toolkit for creating graphical user
@@ -122,7 +122,7 @@ Package: gtk2-engines-pixbuf
 Section: graphics
 Priority: optional
 Architecture: any
-Depends: ${shlibs:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
 Suggests: gtk-engines-pixmap
 Conflicts: gtk2.0-engines-pixbuf
 Replaces: gtk2.0-engines-pixbuf
