--- a/debian/rules
+++ b/debian/rules
@@ -243,6 +243,8 @@ install: install-static install-shared install-dfb
 	mkdir -p debian/libgtk+$(apiver)-directfb$(soname)$(suffix)-udeb/usr/lib/gtk-2.0
 	cp debian/libgtk+$(apiver)-directfb$(soname)$(suffix)/usr/lib/*.so.? \
 		debian/libgtk+$(apiver)-directfb$(soname)$(suffix)-udeb/usr/lib/
+	# We don't need the rpath in the udeb
+	chrpath -d debian/libgtk+$(apiver)-directfb$(soname)$(suffix)-udeb/usr/lib/*.so.?
 	cp -r debian/libgtk+$(apiver)-directfb$(soname)$(suffix)/usr/lib/gtk-2.0/[0-9]* \
 		debian/libgtk+$(apiver)-directfb$(soname)$(suffix)-udeb/usr/lib/gtk-2.0/
 	rm -rf debian/libgtk+$(apiver)-directfb$(soname)$(suffix)-udeb/usr/lib/gtk-2.0/*/{engines,immodules}
@@ -350,7 +352,7 @@ binary-arch: build install
 		usr/share/doc/libgtk$(apiver)-$(soname)$(suffix) \
 		usr/share/doc/libgtk+$(apiver)-directfb$(soname)
 	dh_link -plibgtk+$(apiver)-directfb-dev \
-		usr/share/doc/libgtk$(apiver)-$(soname)$(suffix) \
+		usr/share/doc/libgtk+$(apiver)-directfb$(soname)$(suffix) \
 		usr/share/doc/libgtk+$(apiver)-directfb-dev
 	dh_link -plibgtk$(apiver)-bin \
 		usr/share/doc/libgtk$(apiver)-$(soname)$(suffix) \
@@ -366,9 +368,12 @@ binary-arch: build install
 	dh_strip -a --dbg-package=libgtk$(apiver)-$(soname)-dbg
 	dh_compress -a
 	dh_fixperms -a
-	dh_makeshlibs -a -X usr/lib/gtk-$(apiver) -plibgtk$(apiver)-$(soname)$(suffix) -V "libgtk${apiver}-${soname}${suffix} (>= ${shver})" --add-udeb=libgtk+$(apiver)-directfb$(soname)-dbg
+	dh_makeshlibs -X usr/lib/gtk-$(apiver) -plibgtk$(apiver)-$(soname)$(suffix) -V "libgtk${apiver}-${soname}${suffix} (>= ${shver})" --add-udeb=libgtk+$(apiver)-directfb$(soname)-udeb
+	dh_makeshlibs -X usr/lib/gtk-$(apiver) -plibgtk+$(apiver)-directfb$(soname)$(suffix) -V "libgtk+${apiver}-directfb${soname}${suffix} (>= ${shver})" --add-udeb=libgtk+$(apiver)-directfb$(soname)-udeb
 	dh_installdeb -a
+	cat debian/*/DEBIAN/shlibs | awk "{ print $$1,$$2 }" > debian/shlibs.local
 	dh_shlibdeps -a
+	rm -f debian/shlibs.local
 	dh_gencontrol -a
 	dh_md5sums -a
 	dh_builddeb -a
