--- a/debian/rules
+++ b/debian/rules
@@ -278,8 +278,13 @@ install: install-static install-shared install-dfb
 	# clean the unnecessary files up
 	rm -rf debian/libgtk$(apiver)-$(soname)$(suffix)/usr/share/gtk-doc
 
-	dh_movefiles -Nlibgtk+$(apiver)-directfb-dev --sourcedir=debian/libgtk$(apiver)-$(soname)$(suffix)
-	dh_movefiles -plibgtk+$(apiver)-directfb-dev --sourcedir=debian/libgtk+$(apiver)-directfb$(soname)$(suffix)
+	dh_movefiles --sourcedir=debian/libgtk$(apiver)-$(soname)$(suffix)
+
+	mkdir -p debian/libgtk+$(apiver)-directfb-dev/usr/lib
+	mv debian/libgtk+$(apiver)-directfb$(soname)$(suffix)/usr/lib/{pkgconfig,*.so} \
+		debian/libgtk+$(apiver)-directfb-dev/usr/lib/
+	mv debian/libgtk+$(apiver)-directfb$(soname)$(suffix)/usr/include \
+		debian/libgtk+$(apiver)-directfb-dev/usr/
 
 	-find $(CURDIR)/debian/ -type d -empty | xargs rmdir -p > /dev/null 2>&1
 
