--- a/debian/rules
+++ b/debian/rules
@@ -332,6 +332,7 @@ binary-indep: build install
 	done
 
 	dh_installexamples -i
+	dh_installman -i
 	dh_installinfo -i
 	dh_installchangelogs -i $(BUILD_DIR)/ChangeLog
 	dh_compress -i
