--- a/debian/control.in
+++ b/debian/control.in
@@ -87,7 +87,7 @@ Section: libdevel
 Architecture: any
 Depends: libgtk2.0-@SONAME@ (= ${binary:Version}), libglib2.0-dev (>= 2.8.5), libpango1.0-dev (>= 1.10.0-2), libatk1.0-dev (>= 1.6.1-2), libcairo2-dev, libx11-dev (>= 2:1.0.0-6), libxext-dev, libxinerama-dev, libxi-dev, libxrandr-dev, libxcursor-dev, libxfixes-dev, pkg-config
 Suggests: libgtk2.0-doc
-Replaces: libgtk1.3-dev
+Replaces: libgtk1.3-dev, gtk2-engines-pixbuf (<< 2.8.18-5)
 Conflicts: libgtk1.3-dev
 Description: Development files for the GTK+ library
  The GTK+ is a multi-platform toolkit for creating graphical user
