- New patch, 009_configurable-cairo-backend-module, to add a new     --with-cairo-backend flag which will select a cairo-$backend.pc     pkg-config module instead of the default of cairo.pc; see GNOME #351509.   - Configure with --with-cairo-backend=directfb for the dfb build.   - New patch, 010_gdk-require-cairo-module, to require the Cflags and Libs     from the cairo-directfb module (as $cairo_module); see GNOME #351519.

--- a/debian/rules
+++ b/debian/rules
@@ -155,6 +155,7 @@ $(STAMP_DIR)/configure-dfb-stamp:
 			--enable-shared \
 			--disable-static \
 			--with-gdktarget=directfb \
+			--with-cairo-backend=directfb \
 			--enable-explicit-deps=yes
 
 	cd $(BUILD_DFB_DIR) && \
